[package]
edition = "2021"
name = "arima"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = {"0.6.0" , default-features = false, features = ["prost-codec"]}
sled = "0.34.7"
rocket = "0.5.0-rc.1"
tonic = "0.6.2"
prost = "0.9.0"
hashring = "0.2.0"
uuid = "0.8.2"
clap = { version = "3.0.0", features = ["derive"] }