[package]
edition = "2021"
name = "arima"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0", features = ["derive"]}
hashring = "0.2.0"
prost = "0.9.0"
raft = {version = "0.6.0", default-features = false, features = ["prost-codec"]}
rocket = "0.5.0-rc.1"
rocksdb = "0.17.0"
tonic = "0.6.2"
uuid = "0.8.2"
