[package]
edition = "2021"
name = "arima"
repository = "https://github.com/rohankmr414/arima"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0", features = ["derive"]}
hashring = "0.2.0"
protobuf = "2.25.2"
raft = {version = "0.6.0", default-features = false, features = ["prost-codec"]}
rocket = "0.5.0-rc.1"
rocksdb = "0.17.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
slog = "0.4.0"
tonic = "0.6.2"
uuid = "0.8.2"
log = "0.4.14"
byteorder = "1.4.3"
