[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { version = "0.1.0", path = "../db" }
openraft = "0.6.4"
rocksdb = "0.17.0"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
